<resources>
    <string name="app_name">GroFin</string>
    <string name="no_msg_found">message not found!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Login-->
    <string name="enter_mobile">Enter Mobile</string>
    <string name="register">Register</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="get_otp">Get OTP</string>
    <string name="invalid_mobile_no">Invalid Mobile Number</string>
    <string name="title_login">LOGIN</string>

    <!-- OTP -->
    <string name="submit">SUBMIT</string>
    <string name="enter_otp_number">Enter OTP number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend"><u>Resend</u></string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="sms_otp_info_message">We have sent you a 6 digit OTP number via SMS on your phone</string>
    <string name="did_not_receive_otp">Didn\'t receive OTP?</string>
    <string name="verify">Verify</string>

    <!--    Register-->
    <string name="enter_referral_number">Enter referral number</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="terms_n_conditions">Terms and Conditions</string>
    <string name="referral_does_not_exist">referral does n\'t exist</string>
    <string name="title_register">REGISTER</string>
    <string name="enter_referral">Enter Referral</string>


    <!--Home-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_home">GROFIN</string>
    <string name="drawer_faq">FAQ</string>
    <string name="drawer_support">Support</string>
    <string name="drawer_terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="drawer_about_us">About us</string>
    <string name="share">Share</string>
    <string name="service_tab">Service</string>
    <string name="rewards_tab">Rewards</string>
    <string name="network_tab">Network</string>

    <!--service-->
    <string name="title_motor">Motors</string>

    <string name="under_development">Under Development!</string>
    <string name="referral_optional">(optional)</string>
    <string name="terms_n_conditions_msg">I agree with Terms &amp; Conditions</string>
    <string name="services">Services</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="vehicle_no">Vehicle No.</string>
    <string name="pick_a_date_to_get_a_call">Pick a date to get a call</string>
    <string name="no_service_available">No Service Available</string>

</resources>