<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="errorMobileVisibility"
            type="androidx.databinding.ObservableBoolean" />

        <variable
            name="errorReferralVisibility"
            type="androidx.databinding.ObservableBoolean" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="16dp"
            tools:context=".feature.login.LoginFragment">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="60dp"
                android:src="@drawable/grofin_logo"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_logo"
                android:hint="@string/enter_mobile"
                app:prefixText="+91">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="number"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/et_mobile_error"
                style="@style/EditTextErrorTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_mobile"
                android:layout_alignStart="@id/et_mobile"
                android:layout_marginTop="10dp"
                android:text="@string/invalid_mobile_no"
                android:visibility="@{errorMobileVisibility ? View.VISIBLE : View.GONE}"
                tools:visibility="visible" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_referral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_mobile_error"
                android:hint="@string/enter_referral">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="number"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/et_referral_error"
                style="@style/EditTextErrorTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_referral"
                android:layout_alignStart="@id/et_mobile"
                android:layout_marginTop="10dp"
                android:text="@string/referral_does_not_exist"
                android:visibility="@{errorReferralVisibility ? View.VISIBLE : View.GONE}"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_get_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_referral_error"
                android:layout_marginTop="20dp"
                android:text="@string/get_otp" />
        </RelativeLayout>
    </ScrollView>
</layout>