<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="errorOTPVisibility"
            type="androidx.databinding.ObservableBoolean" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_theme"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/enter_otp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="numberPassword"
                    android:longClickable="false"
                    android:maxLength="6" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/et_pan_error"
                style="@style/EditTextErrorTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_otp"
                android:layout_alignStart="@id/et_otp"
                android:text="@string/invalid_otp"
                android:visibility="@{errorOTPVisibility ? View.VISIBLE : View.GONE}"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_otp"
                android:layout_alignEnd="@id/et_otp"
                android:textColor="@color/purple_700"
                tools:text="@string/resend" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_counter"
                android:layout_marginTop="20dp"
                android:text="@string/login" />
        </RelativeLayout>
    </ScrollView>
</layout>